5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4342/executions/1715_3069.log
== TEST (2019-05-02 16:07:49) 
-- CODE:
"FURIA"=3
X=1
print("FURIA"+x)
-- ERROR:
File "XXXX", line 1
    "FURIA"=3
    ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:08:35) 
-- CODE:
Z="FURIA"
Z=3
X=2
print(Z+X)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:08:50) 
-- CODE:
Z=3
Z="FURIA"

X=2
print(Z+X)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Z+X)
TypeError: must be str, not int
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:14:14) 
-- CODE:
var=int(input("nome do ataque:"))
var2=int(input("dado1:"))
var3=int(input("dado2:"))
fi=10+(var2+var3)
ga=6+(var2+var3)
tm=(var2+var3)**2


if((var!="FURIA") or (var!="GRITO") or (var!="TOQUE")):
	print("Entrada invalida")
elif((var2!=[1,8]) or (var3!=[1,8]):
	  print("Entrada invalida")
if(var=="FURIA"):
	  print(fi)
elif(var=="GRITO"):
	  print(ga)
elif(var=="TOQUE"):
	  print(tm)
-- ERROR:
File "XXXX", line 11
    elif((var2!=[1,8]) or (var3!=[1,8]):
                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:14:37) 
-- CODE:
var=int(input("nome do ataque:"))
var2=int(input("dado1:"))
var3=int(input("dado2:"))
fi=10+(var2+var3)
ga=6+(var2+var3)
tm=(var2+var3)**2


if((var!="FURIA") or (var!="GRITO") or (var!="TOQUE")):
	print("Entrada invalida")
elif((var2!=[1,8]) or (var3!=[1,8])):
	  print("Entrada invalida")
if(var=="FURIA"):
	  print(fi)
elif(var=="GRITO"):
	  print(ga)
elif(var=="TOQUE"):
	  print(tm)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    var=int(input())
ValueError: invalid literal for int() with base 10: 'TOQUE'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:15:07) 
-- CODE:
var=input("nome do ataque:")
var2=int(input("dado1:"))
var3=int(input("dado2:"))
fi=10+(var2+var3)
ga=6+(var2+var3)
tm=(var2+var3)**2


if((var!="FURIA") or (var!="GRITO") or (var!="TOQUE")):
	print("Entrada invalida")
elif((var2!=[1,8]) or (var3!=[1,8])):
	  print("Entrada invalida")
if(var=="FURIA"):
	  print(fi)
elif(var=="GRITO"):
	  print(ga)
elif(var=="TOQUE"):
	  print(tm)
-- OUTPUT:
Entrada invalida
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:15:23) 
-- CODE:
var=input("nome do ataque:")
var2=int(input("dado1:"))
var3=int(input("dado2:"))
fi=10+(var2+var3)
ga=6+(var2+var3)
tm=(var2+var3)**2


if((var!="FURIA") or (var!="GRITO") or (var!="TOQUE")):
	print("Entrada invalida")
elif((var2!=[1,8]) or (var3!=[1,8])):
	  print("Entrada invalida")
if(var=="FURIA"):
	  print(fi)
elif(var=="GRITO"):
	  print(ga)
elif(var=="TOQUE"):
	  print(tm)
-- EXECUTION TIME:
0.132159
-- TEST CASE 1:
---- input:
TOQUE
5
5
---- correct output:
100
---- user output:
Entrada invalida
100
-- TEST CASE 2:
---- input:
GRITA
6
1
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
-- TEST CASE 3:
---- input:
GRITO
6
1
---- correct output:
13
---- user output:
Entrada invalida
13
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:15:30) 
-- CODE:
var=input("nome do ataque:")
var2=int(input("dado1:"))
var3=int(input("dado2:"))
fi=10+(var2+var3)
ga=6+(var2+var3)
tm=(var2+var3)**2


if((var!="FURIA") or (var!="GRITO") or (var!="TOQUE")):
	print("Entrada invalida")
elif((var2!=[1,8]) or (var3!=[1,8])):
	  print("Entrada invalida")
if(var=="FURIA"):
	  print(fi)
elif(var=="GRITO"):
	  print(ga)
elif(var=="TOQUE"):
	  print(tm)
-- OUTPUT:
Entrada invalida
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:15:56) 
-- CODE:
var=input("nome do ataque:")
var2=int(input("dado1:"))
var3=int(input("dado2:"))
fi=10+(var2+var3)
ga=6+(var2+var3)
tm=(var2+var3)**2


if((var!="FURIA") or (var!="GRITO") or (var!="TOQUE")):
	print("Entrada invalida")

if(var=="FURIA"):
	  print(fi)
elif(var=="GRITO"):
	  print(ga)
elif(var=="TOQUE"):
	  print(tm)
-- OUTPUT:
Entrada invalida
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:16:05) 
-- CODE:
var=input("nome do ataque:")
var2=int(input("dado1:"))
var3=int(input("dado2:"))
fi=10+(var2+var3)
ga=6+(var2+var3)
tm=(var2+var3)**2


if((var!="FURIA") or (var!="GRITO") or (var!="TOQUE")):
	print("Entrada invalida")

if(var=="FURIA"):
	  print(fi)
elif(var=="GRITO"):
	  print(ga)
elif(var=="TOQUE"):
	  print(tm)
-- EXECUTION TIME:
0.182
-- TEST CASE 1:
---- input:
TOQUE
5
5
---- correct output:
100
---- user output:
Entrada invalida
100
-- TEST CASE 2:
---- input:
GRITA
6
1
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
-- TEST CASE 3:
---- input:
GRITO
6
1
---- correct output:
13
---- user output:
Entrada invalida
13
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:17:09) 
-- CODE:
var=input("nome do ataque:")
var2=int(input("dado1:"))
var3=int(input("dado2:"))
fi=10+(var2+var3)
ga=6+(var2+var3)
tm=(var2+var3)**2


if((var!="FURIA") or (var!="GRITO") or (var!="TOQUE")):
	print("Entrada invalida")
elif((var2!=[1,8]) or (var3!=[1,8])):
	  print("Entrada invalida")
if(var=="FURIA"):
	  print(fi)
elif(var=="GRITO"):
	  print(ga)
elif(var=="TOQUE"):
	  print(tm)
		
-- OUTPUT:
Entrada invalida
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:17:43) 
-- CODE:
var=input("nome do ataque:")
var2=int(input("dado1:"))
var3=int(input("dado2:"))
fi=10+(var2+var3)
ga=6+(var2+var3)
tm=(var2+var3)**2


if((var!="FURIA") or (var!="GRITO") or (var!="TOQUE")):
	print("Entrada invalida")

if(var=="FURIA"):
	  print(fi)
elif(var=="GRITO"):
	  print(ga)
elif(var=="TOQUE"):
	  print(tm)

-- OUTPUT:
Entrada invalida
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:18:08) 
-- CODE:
var=input("nome do ataque:")
var2=int(input("dado1:"))
var3=int(input("dado2:"))
fi=10+(var2+var3)
ga=6+(var2+var3)
tm=(var2+var3)**2


if((var!="FURIA") or (var!="GRITO") or (var!="TOQUE")):
	print("Entrada invalida")

elif(var=="FURIA"):
	  print(fi)
elif(var=="GRITO"):
	  print(ga)
elif(var=="TOQUE"):
	  print(tm)

-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:18:54) 
-- CODE:
var=input("nome do ataque:")
var2=int(input("dado1:"))
var3=int(input("dado2:"))
fi=10+(var2+var3)
ga=6+(var2+var3)
tm=(var2+var3)**2




if(var=="FURIA"):
	  print(fi)
elif(var=="GRITO"):
	  print(ga)
elif(var=="TOQUE"):
	  print(tm)

-- OUTPUT:
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:19:02) 
-- CODE:
var=input("nome do ataque:")
var2=int(input("dado1:"))
var3=int(input("dado2:"))
fi=10+(var2+var3)
ga=6+(var2+var3)
tm=(var2+var3)**2




if(var=="FURIA"):
	  print(fi)
elif(var=="GRITO"):
	  print(ga)
elif(var=="TOQUE"):
	  print(tm)

-- EXECUTION TIME:
0.192141
-- TEST CASE 1:
---- input:
TOQUE
5
5
---- correct output:
100
---- user output:
100
-- TEST CASE 2:
---- input:
GRITA
6
1
---- correct output:
Entrada invalida
---- user output:

-- TEST CASE 3:
---- input:
GRITO
6
1
---- correct output:
13
---- user output:
13
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:20:48) 
-- CODE:
var=input("nome do ataque:")
var2=int(input("dado1:"))
var3=int(input("dado2:"))
fi=10+(var2+var3)
ga=6+(var2+var3)
tm=(var2+var3)**2

if(var=="FURIA"):
	  print(fi)
elif(var=="GRITO"):
	  print(ga)
elif(var=="TOQUE"):
	  print(tm)
elif((var!="FURIA") and (var!="GRITO") and (var!="TOQUE")):
	print("entrada invalida")

-- OUTPUT:
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:21:10) 
-- CODE:
var=input("nome do ataque:")
var2=int(input("dado1:"))
var3=int(input("dado2:"))
fi=10+(var2+var3)
ga=6+(var2+var3)
tm=(var2+var3)**2

if(var=="FURIA"):
	  print(fi)
elif(var=="GRITO"):
	  print(ga)
elif(var=="TOQUE"):
	  print(tm)
elif((var!="FURIA") and (var!="GRITO") and (var!="TOQUE")):
	print("entrada invalida")

-- OUTPUT:
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:21:26) 
-- CODE:
var=input("nome do ataque:")
var2=int(input("dado1:"))
var3=int(input("dado2:"))
fi=10+(var2+var3)
ga=6+(var2+var3)
tm=(var2+var3)**2

if(var=="FURIA"):
	  print(fi)
elif(var=="GRITO"):
	  print(ga)
elif(var=="TOQUE"):
	  print(tm)
elif((var!="FURIA") and (var!="GRITO") and (var!="TOQUE")):
	print("entrada invalida")

-- OUTPUT:
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:21:40) 
-- CODE:
var=input("nome do ataque:")
var2=int(input("dado1:"))
var3=int(input("dado2:"))
fi=10+(var2+var3)
ga=6+(var2+var3)
tm=(var2+var3)**2

if(var=="FURIA"):
	  print(fi)
elif(var=="GRITO"):
	  print(ga)
elif(var=="TOQUE"):
	  print(tm)
elif((var!="FURIA") and (var!="GRITO") and (var!="TOQUE")):
	print("entrada invalida")

-- OUTPUT:
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:21:53) 
-- CODE:
var=input("nome do ataque:")
var2=int(input("dado1:"))
var3=int(input("dado2:"))
fi=10+(var2+var3)
ga=6+(var2+var3)
tm=(var2+var3)**2

if(var=="FURIA"):
	  print(fi)
elif(var=="GRITO"):
	  print(ga)
elif(var=="TOQUE"):
	  print(tm)
elif((var!="FURIA") and (var!="GRITO") and (var!="TOQUE")):
	print("Entrada invalida")

-- OUTPUT:
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:22:08) 
-- CODE:
var=input("nome do ataque:")
var2=int(input("dado1:"))
var3=int(input("dado2:"))
fi=10+(var2+var3)
ga=6+(var2+var3)
tm=(var2+var3)**2

if(var=="FURIA"):
	  print(fi)
elif(var=="GRITO"):
	  print(ga)
elif(var=="TOQUE"):
	  print(tm)
elif((var!="FURIA") and (var!="GRITO") and (var!="TOQUE")):
	print("Entrada invalida")

-- EXECUTION TIME:
0.169425
-- TEST CASE 1:
---- input:
TOQUE
5
5
---- correct output:
100
---- user output:
100
-- TEST CASE 2:
---- input:
GRITA
6
1
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
-- TEST CASE 3:
---- input:
GRITO
6
1
---- correct output:
13
---- user output:
13
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
